# ChangeLog for dev-python/PyQt4
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/PyQt4/ChangeLog,v 1.184 2012/05/23 04:48:54 jdhore Exp $

  23 May 2012; Jeff Horelick <jdhore@gentoo.org> PyQt4-4.9.1.ebuild:
  marked x86 per bug 412929

  21 May 2012; Mike Gilbert <floppym@gentoo.org> PyQt4-4.8.1.ebuild,
  PyQt4-4.8.4.ebuild, PyQt4-4.9.1.ebuild:
  Inherit eutils.

  16 May 2012; Mike Gilbert <floppym@gentoo.org> PyQt4-4.8.1.ebuild,
  PyQt4-4.8.4.ebuild, PyQt4-4.9.1.ebuild:
  Revert previous change.

  16 May 2012; Mike Gilbert <floppym@gentoo.org> PyQt4-4.8.1.ebuild,
  PyQt4-4.8.4.ebuild, PyQt4-4.9.1.ebuild:
  Restrict python 3.1 to match dev-python/dbus-python.

  13 May 2012; Davide Pesavento <pesa@gentoo.org> metadata.xml:
  Fix kde USE flag description (media-libs/phonon vs. media-sound/phonon).

  04 May 2012; Patrick Lauer <patrick@gentoo.org> PyQt4-4.9.1.ebuild:
  Migrating dev-util/pkgconfig -> virtual/pkgconfig

  24 Apr 2012; Agostino Sarubbo <ago@gentoo.org> PyQt4-4.9.1.ebuild:
  Stable for amd64, wrt bug #412929

  31 Mar 2012; Tobias Klausmann <klausman@gentoo.org> PyQt4-4.8.4.ebuild:
  Stable on alpha, bug #354033

  07 Mar 2012; Andreas K. Huettel <dilfridge@gentoo.org> PyQt4-4.8.1.ebuild,
  PyQt4-4.8.4.ebuild:
  PyQt4-4.8 does not build with sip-4.13, bug 407291

  07 Mar 2012; Davide Pesavento <pesa@gentoo.org> PyQt4-4.9.1.ebuild:
  Slightly improve the ewarn message in pkg_postinst().

  07 Mar 2012; Davide Pesavento <pesa@gentoo.org> metadata.xml:
  Put qt as the primary herd in metadata.

  07 Mar 2012; Davide Pesavento <pesa@gentoo.org> PyQt4-4.8.4.ebuild:
  Fix insecure RUNPATH in qpy/QtOpenGL, thanks to Steve L
  <slong@rathaus.eclipse.co.uk> in bug #407281.

  03 Mar 2012; Davide Pesavento <pesa@gentoo.org> PyQt4-4.9.1.ebuild:
  Switch to EAPI 4, add REQUIRED_USE.

  02 Mar 2012; Davide Pesavento <pesa@gentoo.org> PyQt4-4.8.1.ebuild,
  PyQt4-4.8.4.ebuild: