@@ -4,8 +4,8 @@ AUX PyQt4-4.7.3-qreal_float_support.patch 6460 RMD160 f022dc75ccde5b923c689f82d1
 DIST PyQt-x11-gpl-4.8.1.tar.gz 9409175 RMD160 e5ba0d98359ce315432f479a5f44b2c1ae69b77a SHA1 e064ed38817bafde72f2a57679d80d40c7015afb SHA256 1feab80dc82dcd451233edeb1cde9cc75fa38b6e8f47780ec6dc317ebe0cf370
 DIST PyQt-x11-gpl-4.8.4.tar.gz 9799081 RMD160 100d16e9005e3b83f0030e498a16d99636c9034c SHA1 747236d5dd103687cac54746af0a24a1adbc067c SHA256 fcfa3ecc0b4fad6d93227751b36a6f81ea104ee19dd26905f52de59f060b3e98
 DIST PyQt-x11-gpl-4.9.1.tar.gz 9742132 RMD160 056d6570ffc5ad873ef36d8181122cbb79d7b5ef SHA1 6aa0e64cdcca0f23946c5e6c244b19189c234306 SHA256 f283557f2190ffc00d72fe8451ac15536cab777c36a9b573031328f401629bb1
-EBUILD PyQt4-4.8.1.ebuild 4798 RMD160 7a81d10f66cda059caa504b4a3cb28996f673ec3 SHA1 e093f67a9169b9f4dbc2c5ce6bef764b35285d6d SHA256 4d364404248fefcdea10557edbf14a510b4a70ada175b132ba9e4095a6b609f2
+EBUILD PyQt4-4.8.1.ebuild 4798 RMD160 36de62dc226412a0ff0f9251675cbbc3a829fc44 SHA1 48cba6ef3caf6b7d0b858096052a8f7272e54cd4 SHA256 360a723adeb98fb0f8774ac472f18668a27e86026c939dc0ca4e6bbb0aacd13f
 EBUILD PyQt4-4.8.4.ebuild 4990 RMD160 925cef6af1d1efdb6976512d8e731bf9bdd0a82e SHA1 6302f9305eb800ccb6ac581a0444ad38be5c712a SHA256 c0a29142b86bb2c193f601dfac1256fa4024b3f0b8efd0175ebf1613c92881b3
 EBUILD PyQt4-4.9.1.ebuild 5685 RMD160 d33c443c409c39fe971714a86a4465f418b730b6 SHA1 a05c4dcd6b62f282dd7274fbbe580b6ebb0c370f SHA256 fb422dc089a57496bf483ea3dd639a3459633ed1dfd8bd2fb97b001c2ee1b41e
-MISC ChangeLog 25845 RMD160 2ac8390e364c9b543c1180c7547c437284615aa1 SHA1 0f77146524009f64a5d8d98c9efb4aa0cf05bc42 SHA256 0cd6767fb6a2784658217b06822f45c997ff50964afe60ad15c5005761e6ae65
+MISC ChangeLog 26002 RMD160 3be7715c2d1f9eba3e1f50a049b5af0984d69523 SHA1 011487ae3ee83c8fe3c9ef5c3156fd0ebc68f3bf SHA256 fbd5fa9d2688778254be66db427cfc39348cfe69db9b4eb0fd312addb2e0ea0a
 MISC metadata.xml 1100 RMD160 b6a6f625676d8c3a0d24cd27005e79f696092931 SHA1 d9d7f6a94ebf924c9c7968ac0a8aaa6205497f4e SHA256 7ca5b5cd157c0cea93a86c007b0eaa57882a3b738933299c33eb6e1d4ceca6ae
